[package]
name = "profidcp"
version = "1.0.2"
edition = "2021"

authors = ["uneidel <uneidel@octonion.de>"]
description = "Profinet discovery protocol"
keywords = ["profinet", "dcp"]
license = "MIT"
repository = "https://github.com/uneidel/profinetdcp"

[dependencies]
etherparse = "0.14.2"
libc = "0.2.153"
pcap = "1.2.0"
pnet = "0.34.0"
rand = "0.8.5"
regex = "1.10.3"

# default to small, optimized workspace release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"